name:                potrace-diagrams
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-2
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Diagrams.Potrace
  -- other-modules:       
  other-extensions:    FlexibleContexts
  build-depends:
    base         >= 4.7 && < 5,
    diagrams-lib >= 1.3 && < 1.4,
    potrace      >= 0.1 && < 0.2,
    JuicyPixels
  hs-source-dirs:      src
  default-language:    Haskell2010
