name:                potrace-diagrams
version:             0.1.0.0
synopsis:            Potrace bindings for the diagrams library
description:
  <http://potrace.sourceforge.net Potrace> bindings for the
  <projects.haskell.org/diagrams/ diagrams> library. Converts images
  using the JuicyPixels library to create diagrams paths.
license:             GPL-2
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
copyright:           Copyright (C) 2015 Christopher Chalmers
category:            Graphics
build-type:          Simple
extra-source-files:  README.md, diagrams/*.svg
extra-doc-files:     diagrams/*.svg
cabal-version:       >=1.10

library
  exposed-modules:
    Diagrams.Potrace
  build-depends:
    base         >= 4.7 && < 5,
    diagrams-lib >= 1.3 && < 1.4,
    potrace      >= 0.1 && < 0.2,
    JuicyPixels
  hs-source-dirs:      src
  default-language:    Haskell2010
